src/objects/Source_Opp_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Renewal_Opp__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Renewal_Opp__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_name__c</fullName>
        <formula>Renewal_Opp__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source/Renewal Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source/Renewal Opp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal/Source Opp Mappings</relationshipLabel>
        <relationshipName>Renewal_Opp_Mappings_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Source/Renewal Opp Mappings</relationshipLabel>
        <relationshipName>Source_Opp_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Source/Renewal Opp Mapping</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Source Opp Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source/Renewal Opp Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>